--- a/po/templates/argo.pot
+++ b/po/templates/argo.pot
@@ -1,16 +1,16 @@
-# Cloudflared LuCI English Translations Template
+# Argo LuCI English Translations Template
 # Copyright (C) 2024
-# This file is distributed under the same license as the luci-app-cloudflared package.
+# This file is distributed under the same license as the luci-app-argo package.
 
 msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-msgid "Cloudflare Tunnel"
+msgid "Argo Tunnel"
 msgstr ""
 
-msgid "Cloudflare Tunnel (cloudflared) management interface. Uses Cloudflare remote managed tunnel, you need to create a tunnel in Cloudflare Zero Trust panel first to get Token."
+msgid "Cloudflare Tunnel (Argo) management interface. Uses Cloudflare remote managed tunnel, you need to create a tunnel in Cloudflare Zero Trust panel first to get Token."
 msgstr ""
 
 msgid "Service Status"
@@ -67,7 +67,7 @@ msgstr ""
 msgid "Refresh Logs"
 msgstr ""
 
-msgid "Cloudflared Logs"
+msgid "Argo Logs"
 msgstr ""
 
 msgid "No logs yet"
